Fix too big site title

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,7 +1,7 @@
 /* This file is for your main application css. */
 
 @import "./phoenix.css";
-.site-title { font-size: 18px; margin:0; }
+.site-title { font-size: 18px !important; margin:0; }
 .site-header {
     padding-top: 15px;
     padding-bottom: 15px;
